--- a/wp-stack/comandos-wp.css
+++ b/wp-stack/comandos-wp.css
@@ -67,11 +67,13 @@ h1.post-title {
     height: auto !important;
     margin: 0 auto !important;
     border-radius: 12px !important;
+    aspect-ratio: 3 / 2 !important;
+    object-fit: cover !important;
 }
 
 .single-thumb {
     width: 100% !important;
-    aspect-ratio: 1 / 1 !important;
+    aspect-ratio: 3 / 2 !important;
     object-fit: cover !important;
     border-radius: 16px !important;
     margin: 2rem 0 3rem !important;
