Rebrand to Comandos Blog v2.0.0 and SQL activation fix

--- a/wp-stack/style.css
+++ b/wp-stack/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Autopipe Blog
-Description: Минимальная тема для блога без лишних блоков.
-Version: 1.0
+Theme Name: Comandos Blog
+Description: Премиальная тема для блога от Comandos.
+Version: 4.1
 */
 
 /* Google Fonts removed for Lighthouse 100 */
