Comandos Blog v2.3.0: Switch to latest WordPress image for plugin compatibility

--- a/wp-stack/docker-compose.yml.j2
+++ b/wp-stack/docker-compose.yml.j2
@@ -16,7 +16,7 @@ services:
       - comandos-internal
 
   comandos-wp:
-    image: wordpress:6.6-php8.2-apache
+    image: wordpress:php8.2-apache
     container_name: comandos-wp
     restart: unless-stopped
     depends_on:
